# resume-markdown

./: .gitignore  README.md  pyproject.toml  resume.html  resume.md
src/resume_markdown/: __main__.py
