[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-markdown"
version = "1.0.1"
description = "Convert Markdown resumes to HTML and PDF"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mike Lee Williams", email = "mike@mike.place"}
]
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.0",
    "weasyprint>=66.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/mikepqr/resume-markdown"
Repository = "https://github.com/mikepqr/resume-markdown"
Issues = "https://github.com/mikepqr/resume-markdown/issues"

[project.scripts]
resume-markdown = "resume_markdown:main"
